# discord-soundboard-bot-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  example.env
src/: audio.rs  commands.rs  common.rs  config.rs  db.rs  errors.rs  event_handlers.rs  helpers.rs  main.rs  vars.rs
src/db/: audio_table.rs  mod.rs  paginators.rs  settings_table.rs
