[package]
name = "soundboard-bot"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.12.*" }
songbird = "0.5.*"
tokio = { version = "1.45.*", features = ["full"] }
symphonia = { version = "*", features = ["mp3"] }
dotenv = { version = "*" }
anyhow = { version = "1.0.*" }
log = { version = "0.4.27" }
env_logger = { version = "0.11.*" }
reqwest = { version = "0.12.20" }
openssl = { version = "0.10.*", features = ["vendored"] }
r2d2 = "0.8.*"
r2d2_sqlite = "0.30.0"
rusqlite = { version = "0.36.0", features = [
    "chrono",
    "bundled",
] } # identical to r2d2_sqlite rusqlite version, to enable chrono feature
chrono = "0.4.*"
poise = "0.6.1"
config = "0.15.*"
thiserror = "2.0.*"
serde = { version = "1.0.*", features = ["derive"] }
regex = "1.11.*"
futures = "0.3.*"
uuid = "1.17.*"
